<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sdv_localization</name>
  <version>3.0.0</version>
  <description>Package with scripts, configurations and launch files for use in VantTec's SDV</description>
  <maintainer email="rogelio.salais@hotmail.com">Rogelio Salais</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vectornav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sdv_localization_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sbg_driver</depend>

  <!-- TODO: .msg Hex Constant Support Required -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend version_gte="1.2.0">rosidl_adapter</depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>


  <!-- Maintainer Note:
    The vnccpplib directory is from http://www.vectornav.com/support/downloads
  -->
</package>